ether_ipApp/src/ether_ip.h

typedef int               EIP_SOCKET;
typedef int               EIP_SOCKET;
/********************************************************
 * ControlNet data types
 * Spec 5 p 3
 ********************************************************/

 /* ControlNet uses Little Endian, not the common IP format!
  * Exception:
  * Addresses packed at sockaddr_in are in network order as usual.
  */
typedef signed char    CN_SINT;
typedef unsigned char  CN_USINT;
typedef unsigned short CN_UINT;
typedef short          CN_INT;
typedef unsigned int   CN_UDINT;
typedef int            CN_DINT;
typedef float          CN_REAL;
/********************************************************
 * Logix5000
 ********************************************************/

/* Parses tags of the form
 *     name.name[element].name[element].name
 * and converts them into list of path elements
 */
typedef struct __ParsedTag ParsedTag;
struct __ParsedTag
{
    enum
    {
        te_name,
        te_element
    }           type;
    union
    {
        char   *name;
        size_t element;
    }           value;
    ParsedTag   *next;
};
/* (Abbreviated) type codes for CIP data
 * ENET p. 11
 * There are no 'unsigned' designators.
 */
typedef enum
{
    T_CIP_BOOL   = 0x00C1,
    T_CIP_SINT   = 0x00C2,
    T_CIP_INT    = 0x00C3,
    T_CIP_DINT   = 0x00C4,
    T_CIP_REAL   = 0x00CA,
	T_CIP_WORD   = 0x00D2,
    T_CIP_BITS   = 0x00D3,
    T_CIP_STRUCT = 0x02A0
} CIP_Type;
/* These are experimental:
 * The ENEC doc just shows several structures
 * for TIMER, COUNTER, CONTROL and indicates that
 * the T_CIP_STRUCT = 0x02A0 is followed by
 * two more bytes, shown as "?? ??".
 * Looks like for strings, those are always 0x0FCE,
 * followed by INT length, INT 0, 82 characters and more zeroes
 */
typedef enum
{
//    T_CIP_STRUCT_STRING = 0x0FCE
	T_CIP_STRUCT_STRING = 0x00D0
} CIP_STRUCT_Type;
ParsedTag *EIP_parse_tag(const char *tag);
void EIP_copy_ParsedTag(char *buffer, const ParsedTag *tag);
void EIP_free_ParsedTag(ParsedTag *tag);
/* dump CIP data, type and data are in raw format */
void dump_raw_CIP_data(const CN_USINT *raw_type_and_data, size_t elements);
eip_bool get_CIP_double(const CN_USINT *raw_type_and_data,
                    size_t element, double *result);
eip_bool get_CIP_UDINT(const CN_USINT *raw_type_and_data,
                   size_t element, CN_UDINT *result);
eip_bool get_CIP_DINT(const CN_USINT *raw_type_and_data,
                  size_t element, CN_DINT *result);
eip_bool get_CIP_USINT(const CN_USINT *raw_type_and_data,
                       size_t element, CN_USINT *result);
/* Fill buffer with up to 'size' characters (incl. ending '\0').
 * Return true for success */
eip_bool get_CIP_STRING(const CN_USINT *raw_type_and_data,
                    char *buffer, size_t size);
eip_bool put_CIP_double(const CN_USINT *raw_type_and_data,
                    size_t element, double value);
eip_bool put_CIP_UDINT(const CN_USINT *raw_type_and_data,
                   size_t element, CN_UDINT value);
eip_bool put_CIP_DINT(const CN_USINT *raw_type_and_data,
                  size_t element, CN_DINT value);
/*
 * Fill raw_type_and_data with data and data length.  Leave
 * the other portion of it unchanged.
 */
eip_bool put_CIP_STRING(const CN_USINT *raw_type_and_data,
                  char *value, size_t size);
/********************************************************
 * Utility types for this driver
 ********************************************************/

/* Parameters used to identify a Forward_Open connection */
typedef struct
{
    /* Have to be set for make_CM_Forward_Open */
    CN_USINT   priority_and_tick;
    CN_USINT   connection_timeout_ticks;
    CN_UDINT   O2T_CID;
    CN_UDINT   T2O_CID;
    CN_UINT    connection_serial;
    CN_UINT    vendor_ID;
    CN_UDINT   originator_serial;
}   EIPConnectionParameters;
/* Some values taken from the Itentity object
 * of the target
 */
typedef struct
{
    CN_UINT vendor;
    CN_UINT device_type;
    CN_UINT revision;
    CN_UDINT serial_number;
    /* Table 10.3 in spec limits string to 32 chars,
     * but CompactLogix seems to return 52 characters.
     */
   CN_USINT name[100];
} EIPIdentityInfo;
/* Parameters & buffers for one EtherNet/IP connection.
 * sock == 0 is used to detect unused/shutdown connections. */
typedef struct
{
    EIP_SOCKET              sock;       /* silk or nylon */
    int                     slot;       /* PLC's slot on backplane */
    size_t                  transfer_buffer_limit; /* PLC limit */
    size_t                  millisec_timeout; /* .. for socket calls */
    CN_UDINT                session;    /* session ID, generated by target */
    CN_USINT                *buffer;    /* buffer for read/write, EIP_BUFFER_SIZE */
    EIPIdentityInfo         info;
    EIPConnectionParameters params;
}   EIPConnection;
/** Allocate EIPConnection */
EIPConnection *EIP_init();
/** Dispose EIPConnection */
void EIP_dispose(EIPConnection *c);
/** Connect to PLC */
eip_bool EIP_startup(EIPConnection *c,
                 const char *ip_addr, unsigned short port,
                 int slot,
                 size_t millisec_timeout);
/** Disconnect from PLC */
void EIP_shutdown(EIPConnection *c);
/* Read a single tag in a single CIP_ReadData request,
 * report data & data_length
 * as well as sizes of CIP_ReadData request/response
 */
const CN_USINT *EIP_read_tag(EIPConnection *c,
                             const ParsedTag *tag, size_t elements,
                             size_t *data_size,
                             size_t *request_size, size_t *response_size);
eip_bool EIP_write_tag(EIPConnection *c, const ParsedTag *tag,
                   CIP_Type type, size_t elements, CN_USINT *data,
                   size_t *request_size,
                   size_t *response_size);